--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -1,16 +1,25 @@
 <html>
-
 <body>
+
+<div>
+    <form action="/login" method="post">
+        <input type="submit" value="Sing Out"/>
+        <input type="hidden" name="_csrf" value="{{_csrf.token}}"/>
+    </form>
+</div>
+
 <div>
     <form method="post">
         <input type="text" name="text" placeholder="Введите сообщение" />
         <input type="text" name="tag" placeholder="Тэг">
+        <input type="hidden" name="_csrf" value="{{_csrf.token}}"/>
         <button type="submit">Добавить</button>
     </form>
 </div>
 <div>Список сообщений</div>
 <form method="post" action="filter">
     <input type="text" name="filter">
+    <input type="hidden" name="_csrf" value="{{_csrf.token}}">
     <button type="submit">Найти</button>
 </form>
 {{#messages}}
